From 8e46be9 (closure-adv):
==========================

In prisim/bispectrum_phase.py,

(*) In member function compute_power_spectrum() of class
ClosurePhaseDelaySpectrum, remove commented lines, and obsolete
keyword inputs cohax, incohax, and outmode. Docstring of member
function yet to be updated.

From 6dba85e (closure-adv):
==========================

In prisim/bispectrum_phase.py,

(*) In member function compute_power_spectrum() of class
ClosurePhaseDelaySpectrum, add input keywords autoinfo, xinfo to
provide options for auto-power and cross-power spectra. Docstring
of member function yet to be updated

From 1d5505c (closure-adv):
==========================

In prisim/bispectrum_phase.py,

(*) Add input keyword outmode in input to member function
compute_power_spectrum() of class ClosurePhaseDelaySpectrum. This
will allow the member function to return the full cross power
spectrum without averaging. Update member function docstring
accordingly

From 26dbdb0 (master):
=====================

In prisim/bispectrum_phase.py,

(*) Import reduce from functools module
(*) Add member functions rescale_power_spectrum() and
average_rescaled_power_spectrum() to class ClosurePhaseDelaySpectrum
with docstrings to rescale the power spectrum of ratio to power of a
quantity with physical units and to average this rescaled power along
the specified axes respectively. Update docstring accordingly
(*) Include values under keys 'fftpow' in output of member function
FT() of class ClosurePhaseDelaySpectrum. Update member function
docstring accordingly
(*) Include values under keys 'fftpow', 'freq_center', 'freq_wts',
'bw_eff', 'shape', 'lag_corr_length' and 'fftpow' in output dictionary 
of member function compute_power_spectrum() of class
ClosurePhaseDelaySpectrum. Update member function docstring
accordingly.
(*) Additional minor updates to docstring of member function
compute_power_spectrum() of class ClosurePhaseDelaySpectrum.


From 7c18537 (pbeam):
====================
